# anamnesis

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONVENTIONS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN-PTH-v0.3.1.md  README.md  ROADMAP.md
.github/workflows/: ci.yml  publish.yml
benches/: README.md  dequant.rs  parsing.rs
docs/: FAQ.md  PLAN-candle-3617-pickle-hardening.md  amn-flagship-v1-superseded.md  amn-flagship-v2.md  anamnesis-brief.md  cli-reference.md  lethe-encode-guide.md  perf-experiments.md  python-interop.md  rust-ecosystem-comparison.md  validation.md
docs/formats/: gemmascope.md  gguf-iq-quant-sourcing.md
docs/tutorials/: convert-between-formats.md  dequantize-a-gguf-model.md  inspect-before-you-parse.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_gguf.rs  fuzz_gguf_bytes.rs  fuzz_gguf_limits.rs  fuzz_npz.rs  fuzz_npz_limits.rs  fuzz_npz_parse.rs  fuzz_pth.rs  fuzz_pth_bytes.rs  fuzz_pth_limits.rs  fuzz_pth_parse.rs  fuzz_safetensors.rs  fuzz_safetensors_bytes.rs  fuzz_zip.rs
src/: backing.rs  cli.rs  convert.rs  error.rs  inspect.rs  lib.rs  limits.rs  model.rs
src/lethe/: bnb.rs  bnb_writer.rs  mod.rs  round_trip.rs
src/parse/: gguf.rs  gguf_write.rs  mod.rs  npz.rs  ollama.rs  pth.rs  safetensors.rs  utils.rs  zip.rs
src/remember/: awq.rs  bnb.rs  fp8.rs  gguf.rs  gptq.rs  mod.rs  npz.rs  pth.rs  quant_utils.rs
tests/: README.md  bench_convert_adhoc.rs  bench_dequant_adhoc.rs  bench_gguf_inspect_adhoc.rs  bench_npz_adhoc.rs  bench_parse_adhoc.rs  bench_pth_adhoc.rs  bench_pth_inspect_adhoc.rs  cli.rs  cli_convert.rs  cross_validation.rs  cross_validation_awq.rs  cross_validation_bnb.rs  cross_validation_bnb_encode.rs  cross_validation_convert.rs  cross_validation_gguf.rs  cross_validation_gptq.rs  cross_validation_npz.rs  cross_validation_ollama.rs  cross_validation_pth.rs  cross_validation_safetensors.rs  no_panic.rs  panic_profile.rs  parse_owned_path.rs  peak_heap_README.md  peak_heap_awq.rs  peak_heap_bnb_dq.rs  peak_heap_gptq.rs  peak_heap_zip_metadata.rs  python_ownership_contract.rs  remember_orientation.rs
tests/fixtures/awq_reference/: generate_awq.py
tests/fixtures/bnb_reference/: generate_bnb.py  llama_1b_fp4.timing.json  llama_1b_int8.timing.json  llama_1b_nf4.timing.json  llama_1b_nf4_double_quant.timing.json  phi3_5_mini_nf4_dq.timing.json  qwen2_5_1_5b_nf4_dq.timing.json  qwen3_mcqa_fp4.timing.json
tests/fixtures/convert_reference/: README.md  generate_convert_timings.py  npz_to_st.timing.json  npz_to_st_torch.timing.json  pth_to_st.timing.json  st_to_bnb_nf4.timing.json  st_to_gguf.timing.json  st_to_gguf_torch.timing.json
tests/fixtures/fp8_reference/: generate.py
tests/fixtures/gguf_reference/: generate_gguf.py
tests/fixtures/gptq_reference/: generate_gptq.py
tests/fixtures/npz_reference/: gemma_scope_small.npz  generate_npz.py
tests/fixtures/ollama_reference/: generate_ollama_fixture.py
tests/fixtures/pth_reference/: algzoo_rnn_blog.pth  algzoo_rnn_blog_reference.json  algzoo_rnn_small.pth  algzoo_rnn_small_reference.json  algzoo_transformer_small.pth  algzoo_transformer_small_reference.json  bench_python_inspect.py  generate_pth_reference.py
tests/fixtures/safetensors_reference/: awq.expected.json  awq.safetensors  bnb_nf4.expected.json  bnb_nf4.safetensors  fp8.expected.json  fp8.safetensors  generate.py  gptq.expected.json  gptq.safetensors
