[package]
name = "anamnesis"
version = "0.6.0"
edition = "2021"
rust-version = "1.88"
description = "Parse any tensor format, recover any precision — framework-agnostic FP8/GPTQ/AWQ/BnB dequantization, NPZ parsing, and PyTorch .pth conversion for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PCfVW/anamnesis"
homepage = "https://github.com/PCfVW/anamnesis"
documentation = "https://docs.rs/anamnesis"
keywords = ["safetensors", "dequantization", "pytorch", "gptq", "machine-learning"]
categories = ["science", "parser-implementations"]
default-run = "anamnesis"

# `[package.metadata.docs.rs]` accepts only docs.rs-specific build keys
# (features, targets, all-features, no-default-features). Other Cargo
# package fields placed here are silently ignored — `categories` and
# `default-run` previously sat here and never took effect, so the
# published crate had no categories on crates.io and `cargo run` without
# `--bin` errored. Both keys now sit in `[package]` where Cargo reads
# them.
[package.metadata.docs.rs]
features = ["npz", "pth", "gguf", "awq", "gptq", "bnb", "ollama"]

[features]
default = []
cli = ["dep:clap"]
gptq = []
awq = []
bnb = []
npz = ["dep:zip"]
pth = ["dep:zip"]
gguf = []
# Ollama model-cache path resolver — turns `ollama:llama3.2:1b` into
# the local GGUF blob path by reading the Ollama manifest. Adds NO
# third-party dependency: uses only stdlib + `serde_json` (already a
# runtime dep). Implies `gguf` because every Ollama blob is a GGUF.
ollama = ["gguf"]
indicatif = ["dep:indicatif"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
float8 = "0.7"
half = "2"
indicatif = { version = "0.18", optional = true }
# memmap2 is mandatory: used by the always-on safetensors `parse()` path
# to avoid eagerly reading the full file into a `Vec<u8>` (`fs::read`).
# See `docs/perf-experiments.md` entry on audit finding #2.
memmap2 = "0.9"
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }
safetensors = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[[bin]]
name = "anamnesis"
path = "src/bin/anamnesis.rs"
required-features = ["cli"]

[[bin]]
name = "amn"
path = "src/bin/amn.rs"
required-features = ["cli"]

[dev-dependencies]
# Phase 6.5 dev-only benchmark harness. Provides statistical-rigour
# throughput measurement (Welch t-tests, bootstrap CIs), HTML report
# generation, and regression detection across runs. The `html_reports`
# feature is left at its default — Criterion's reports live in
# `target/criterion/` and are never published.
criterion = "0.5"
tempfile = "3"

# Phase 6.5: dequantisation throughput benchmarks (decode side).
# Will gain `benches/encode.rs` at Phase 7.5 when the encode kernels
# land; today's deferred-split rationale lives in ROADMAP.md.
[[bench]]
name = "dequant"
harness = false
required-features = ["gptq", "awq", "bnb", "gguf"]

# Phase 6.5: parser throughput benchmarks vs raw `fs::read` baseline.
[[bench]]
name = "parsing"
harness = false
required-features = ["npz", "pth", "gguf"]

[lints.rust]
# `deny` (not `forbid`) so feature-gated modules (e.g., pth with memmap2)
# can opt in to unsafe with a local #[allow(unsafe_code)] + // SAFETY: comment.
unsafe_code = "deny"
elided_lifetimes_in_paths = "deny"

[lints.clippy]
# Pedantic: catch more issues (priority -1 so specific overrides below take effect)
pedantic = { level = "warn", priority = -1 }

# Rule 3: No panics
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"

# Rule 7: Exhaustive matching
wildcard_enum_match_arm = "deny"

# Rule 2: Explicit conversions
as_conversions = "warn"

# Rule 9: Prefer iterators
explicit_iter_loop = "warn"
manual_filter_map = "warn"
manual_find_map = "warn"
needless_range_loop = "warn"

# Rule 17: #[must_use]
must_use_candidate = "warn"

# Additional strictness
missing_errors_doc = "warn"
missing_panics_doc = "warn"

# Allow noisy pedantic lints
module_name_repetitions = "allow"
too_many_lines = "allow"
