[package]
name = "anamnesis"
version = "0.6.8"
edition = "2021"
rust-version = "1.88"
description = "Parse any tensor format, recover any precision — framework-agnostic FP8/GPTQ/AWQ/BnB dequantization, NPZ parsing, and PyTorch .pth conversion for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PCfVW/anamnesis"
homepage = "https://github.com/PCfVW/anamnesis"
documentation = "https://docs.rs/anamnesis"
keywords = ["safetensors", "dequantization", "pytorch", "gptq", "machine-learning"]
categories = ["science", "parser-implementations"]
default-run = "anamnesis"
# The `fuzz/` cargo-fuzz harness is dev-only (nightly + libFuzzer) and must
# never ship in the published crate or affect the build for ordinary users.
exclude = ["/fuzz"]

# `[package.metadata.docs.rs]` accepts only docs.rs-specific build keys
# (features, targets, all-features, no-default-features). Other Cargo
# package fields placed here are silently ignored — `categories` and
# `default-run` previously sat here and never took effect, so the
# published crate had no categories on crates.io and `cargo run` without
# `--bin` errored. Both keys now sit in `[package]` where Cargo reads
# them.
[package.metadata.docs.rs]
features = ["npz", "pth", "gguf", "awq", "gptq", "bnb", "ollama"]

# Production release artefacts (the `anamnesis` / `amn` CLI binaries, and any
# release build of the library) abort on panic. The untrusted-input DoS analysis
# (`ROADMAP.md` Phases 6.6–6.13, `CHANGELOG.md` Security notes, `src/parse/pth.rs`)
# treats a reachable panic as a process kill and argues severity on that basis;
# `panic = "abort"` makes that the committed, fail-closed behaviour rather than an
# unstated assumption. Cargo automatically rebuilds test/bench targets with
# `unwind` (libtest requires it), so `cargo test` / `cargo test --release` are
# unaffected.
#
# Phase 6.13 exception: the PyO3 extension `cdylib` must build `panic = "unwind"`
# so PyO3 converts a Rust panic into a catchable Python `PanicException` instead
# of aborting the host worker. That override lives in `[profile.python]` below;
# Phase 8's maturin build selects it with `--profile python`.
[profile.release]
panic = "abort"

# The profile the Phase 8 PyO3 `cdylib` is built with (maturin `--profile
# python`). Identical to `release` except panics **unwind**: PyO3's panic
# boundary turns an unwinding panic into a catchable Python `PanicException`,
# whereas `panic = "abort"` would kill the worker uncatchably — voiding the
# bindings' "malformed bytes -> exception, never a dead worker" pledge. Enforced
# by `tests/panic_profile.rs`; see `docs/python-interop.md`.
[profile.python]
inherits = "release"
panic = "unwind"

[features]
default = []
cli = ["dep:clap"]
gptq = []
awq = []
bnb = []
npz = ["dep:flate2"]
pth = ["dep:flate2"]
gguf = []
# Ollama model-cache path resolver — turns `ollama:llama3.2:1b` into
# the local GGUF blob path by reading the Ollama manifest. Adds NO
# third-party dependency: uses only stdlib + `serde_json` (already a
# runtime dep). Implies `gguf` because every Ollama blob is a GGUF.
ollama = ["gguf"]
indicatif = ["dep:indicatif"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
float8 = "0.7"
half = "2"
indicatif = { version = "0.18", optional = true }
# memmap2 is mandatory: used by the always-on safetensors `parse()` path
# to avoid eagerly reading the full file into a `Vec<u8>` (`fs::read`).
# See `docs/perf-experiments.md` entry on audit finding #2.
memmap2 = "0.9"
# Pure-Rust DEFLATE inflate backend (`miniz_oxide`) for `.npz` DEFLATE entries.
# Since Phase 6.12 the `.pth` / `.npz` container parsing is owned by the
# vendored `src/parse/zip.rs` reader (the `zip` crate is dev-only now — see
# `[dev-dependencies]`); `flate2` remains the runtime codec the vendored reader
# delegates inflate to. Enabled by the `npz` / `pth` features.
flate2 = { version = "1", default-features = false, features = ["rust_backend"], optional = true }
safetensors = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[[bin]]
name = "anamnesis"
path = "src/bin/anamnesis.rs"
required-features = ["cli"]

[[bin]]
name = "amn"
path = "src/bin/amn.rs"
required-features = ["cli"]

[dev-dependencies]
# Phase 6.5 dev-only benchmark harness. Provides statistical-rigour
# throughput measurement (Welch t-tests, bootstrap CIs), HTML report
# generation, and regression detection across runs. The `html_reports`
# feature is left at its default — Criterion's reports live in
# `target/criterion/` and are never published.
criterion = "0.5"
# Phase 6.5 dev-only peak-heap profiler. The `tests/peak_heap_*.rs`
# binaries (and only there) declare `dhat::Alloc` as their
# `#[global_allocator]`, so every allocation in those binaries is
# wrapped — but actual heap-stats tracking only starts when a
# `dhat::Profiler` is constructed inside a test fn. Both peak_heap
# tests in each binary are `#[ignore]`d so default `cargo test`
# skips them entirely; the dhat allocator's per-allocation overhead
# is paid only at binary startup (a few KiB to a few ms) and
# `Profiler` is never created. Two assertion forms ship:
# `K × out_features × 4` ratio (GPTQ/AWQ) and `4 KiB` noise-tolerance
# decomposition (BnB-DQ). See `tests/peak_heap_README.md` for the
# rationale + calibration tables.
dhat = "0.3"
tempfile = "3"
# Phase 6.12: `zip` is dev-only now — the runtime container parsing is owned by
# the vendored `src/parse/zip.rs` reader. The crate is retained here for the
# `ZipWriter` test fixtures and as the differential oracle the vendored reader
# is checked against (`fuzz_zip` + the in-crate `differential_*` tests). Same
# inflate-only feature set the runtime dep carried (no `zopfli` compressor).
zip = { version = "2", default-features = false, features = ["deflate-flate2", "flate2"] }
# The runtime `flate2` dependency above is `optional` (off unless `npz`/`pth`)
# and pins `default-features = false`, which suppresses flate2's backend. When a
# default-feature `--all-targets` test build pulls `flate2` via the `zip`
# dev-dependency, that suppression would leave it backend-less, so re-assert the
# pure-Rust `rust_backend` (miniz_oxide) here for the test/bench build.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

# Phase 6.5: dequantisation throughput benchmarks (decode side).
# Will gain `benches/encode.rs` at Phase 7.5 when the encode kernels
# land; today's deferred-split rationale lives in ROADMAP.md.
[[bench]]
name = "dequant"
harness = false
required-features = ["gptq", "awq", "bnb", "gguf"]

# Phase 6.5: parser throughput benchmarks vs raw `fs::read` baseline.
[[bench]]
name = "parsing"
harness = false
required-features = ["npz", "pth", "gguf"]

[lints.rust]
# `deny` (not `forbid`) so feature-gated modules (e.g., pth with memmap2)
# can opt in to unsafe with a local #[allow(unsafe_code)] + // SAFETY: comment.
unsafe_code = "deny"
elided_lifetimes_in_paths = "deny"

[lints.clippy]
# Pedantic: catch more issues (priority -1 so specific overrides below take effect)
pedantic = { level = "warn", priority = -1 }

# Rule 3: No panics
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"

# Rule 7: Exhaustive matching
wildcard_enum_match_arm = "deny"

# Rule 2: Explicit conversions
as_conversions = "warn"

# Rule 9: Prefer iterators
explicit_iter_loop = "warn"
manual_filter_map = "warn"
manual_find_map = "warn"
needless_range_loop = "warn"

# Rule 17: #[must_use]
must_use_candidate = "warn"

# Additional strictness
missing_errors_doc = "warn"
missing_panics_doc = "warn"

# Allow noisy pedantic lints
module_name_repetitions = "allow"
too_many_lines = "allow"
